--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               to providing the latest and most innovative smartwatches to our
               customers.
             </p>
-            <a href="./smartwatch/index.html" target="_blank"
+            <a href="#" target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
@@ -158,7 +158,7 @@
               elements on a website to ensure its functionality, usability, and
               aesthetic appeal.
             </p>
-            <a href="./Password Generater/index.html " target="_blank"
+            <a href="# " target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
@@ -172,7 +172,7 @@
               fitness instructor for a group of participants with similar
               fitness goals.
             </p>
-            <a href="./fittness/index.html" target="_blank"
+            <a href="#" target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
@@ -186,7 +186,7 @@
               elements on a website to ensure its functionality, usability, and
               aesthetic appeal.
             </p>
-            <a href="./To do list/index.html" target="_blank"
+            <a href="#" target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
@@ -200,7 +200,7 @@
               into loyal customers with user-friendly interfaces, intuitive
               navigation, and engaging features.
             </p>
-            <a href="./Webtech/WebTech Solutions.html" target="_blank"
+            <a href="#" target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
