--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               to providing the latest and most innovative smartwatches to our
               customers.
             </p>
-            <a href="#" target="_blank"
+            <a href="./smartwatch/index.html" target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
