--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               fitness instructor for a group of participants with similar
               fitness goals.
             </p>
-            <a href="#" target="_blank"
+             <a href="./fittness/index.html" target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
@@ -186,7 +186,7 @@
               elements on a website to ensure its functionality, usability, and
               aesthetic appeal.
             </p>
-            <a href="#" target="_blank"
+          <a href="./To do list/index.html" target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
@@ -200,7 +200,7 @@
               into loyal customers with user-friendly interfaces, intuitive
               navigation, and engaging features.
             </p>
-            <a href="#" target="_blank"
+           <a href="./Webtech/WebTech Solutions.html" target="_blank"
               ><i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </div>
